crates/etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_iceberg_replicator_stateful_set_json.snap
---
source: crates/etl-api/src/k8s/http.rs
expression: "serde_json :: to_string_pretty(& stateful_set_json).unwrap()"
---
{
  "apiVersion": "apps/v1",
  "kind": "StatefulSet",
  "metadata": {
    "labels": {
      "etl.supabase.com/app-name": "abcdefghijklmnopqrst-42-replicator-app",
      "etl.supabase.com/app-type": "etl-replicator-app",
      "etl.supabase.com/pipeline-id": "24",
      "etl.supabase.com/replicator-id": "42",
      "etl.supabase.com/tenant-id": "abcdefghijklmnopqrst"
    },
    "name": "abcdefghijklmnopqrst-42-replicator",
    "namespace": "etl-data-plane"
  },
  "spec": {
    "replicas": 1,
    "selector": {
      "matchLabels": {
        "etl.supabase.com/app-name": "abcdefghijklmnopqrst-42-replicator-app",
        "etl.supabase.com/app-type": "etl-replicator-app"
      }
    },
    "template": {
      "metadata": {
        "annotations": {
          "etl.supabase.com/restarted-at": "[timestamp]"
        },
        "labels": {
          "etl.supabase.com/app-name": "abcdefghijklmnopqrst-42-replicator-app",
          "etl.supabase.com/app-type": "etl-replicator-app",
          "etl.supabase.com/pipeline-id": "24",
          "etl.supabase.com/replicator-id": "42",
          "etl.supabase.com/tenant-id": "abcdefghijklmnopqrst"
        }
      },
      "spec": {
        "containers": [
          {
            "env": [
              {
                "name": "APP_ENVIRONMENT",
                "value": "dev"
              },
              {
                "name": "APP_VERSION",
                "value": "ramsup/etl-replicator:2a41356af735f891de37d71c0e1a62864fe4630e"
              },
              {
                "name": "RUST_LOG",
                "value": "info"
              },
              {
                "name": "RUST_BACKTRACE",
                "value": "1"
              },
              {
                "name": "APP_PIPELINE__PG_CONNECTION__PASSWORD",
                "valueFrom": {
                  "secretKeyRef": {
                    "key": "password",
                    "name": "abcdefghijklmnopqrst-42-postgres-password"
                  }
                }
              },
              {
                "name": "APP_DESTINATION__ICEBERG__SUPABASE__CATALOG_TOKEN",
                "valueFrom": {
                  "secretKeyRef": {
                    "key": "catalog-token",
                    "name": "abcdefghijklmnopqrst-42-iceberg"
                  }
                }
              },
              {
                "name": "APP_DESTINATION__ICEBERG__SUPABASE__S3_ACCESS_KEY_ID",
                "valueFrom": {
                  "secretKeyRef": {
                    "key": "s3-access-key-id",
                    "name": "abcdefghijklmnopqrst-42-iceberg"
                  }
                }
              },
              {
                "name": "APP_DESTINATION__ICEBERG__SUPABASE__S3_SECRET_ACCESS_KEY",
                "valueFrom": {
                  "secretKeyRef": {
                    "key": "s3-secret-access-key",
                    "name": "abcdefghijklmnopqrst-42-iceberg"
                  }
                }
              }
            ],
            "image": "ramsup/etl-replicator:2a41356af735f891de37d71c0e1a62864fe4630e",
            "name": "abcdefghijklmnopqrst-42-replicator",
            "ports": [
              {
                "containerPort": 9000,
                "name": "metrics",
                "protocol": "TCP"
              }
            ],
            "resizePolicy": [
              {
                "resourceName": "cpu",
                "restartPolicy": "NotRequired"
              },
              {
                "resourceName": "memory",
                "restartPolicy": "NotRequired"
              }
            ],
            "resources": {
              "limits": {
                "cpu": "250m",
                "memory": "768Mi"
              },
              "requests": {
                "cpu": "250m",
                "memory": "768Mi"
              }
            },
            "securityContext": {
              "allowPrivilegeEscalation": false,
              "capabilities": {
                "drop": [
                  "ALL"
                ]
              }
            },
            "volumeMounts": [
              {
                "mountPath": "/app/configuration",
                "name": "replicator-config-file"
              }
            ]
          }
        ],
        "initContainers": [],
        "nodeSelector": {},
        "securityContext": {
          "seccompProfile": {
            "type": "RuntimeDefault"
          }
        },
        "serviceAccountName": "etl-replicator",
        "terminationGracePeriodSeconds": 300,
        "tolerations": [],
        "volumes": [
          {
            "configMap": {
              "name": "abcdefghijklmnopqrst-42-replicator-config"
            },
            "name": "replicator-config-file"
          }
        ]
      }
    },
    "updateStrategy": {
      "type": "RollingUpdate"
    }
  }
}
