crates/etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_postgres_secret_env_var_json.snap
---
source: crates/etl-api/src/k8s/http.rs
expression: postgres_env_var_json
---
{
  "name": "APP_PIPELINE__PG_CONNECTION__PASSWORD",
  "valueFrom": {
    "secretKeyRef": {
      "key": "password",
      "name": "abcdefghijklmnopqrst-42-postgres-password"
    }
  }
}
