crates/etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_postgres_secret_json.snap
---
source: crates/etl-api/src/k8s/http.rs
expression: secret_json
---
{
  "apiVersion": "v1",
  "data": {
    "password": "dGVzdC1wYXNzd29yZA=="
  },
  "kind": "Secret",
  "metadata": {
    "labels": {
      "etl.supabase.com/app-name": "abcdefghijklmnopqrst-42-replicator-app",
      "etl.supabase.com/app-type": "etl-replicator-app",
      "etl.supabase.com/pipeline-id": "42",
      "etl.supabase.com/replicator-id": "42",
      "etl.supabase.com/tenant-id": "abcdefghijklmnopqrst"
    },
    "name": "abcdefghijklmnopqrst-42-postgres-password",
    "namespace": "etl-data-plane"
  },
  "type": "Opaque"
}
